# webserv

./: CMakeCache.txt  CMakeLists.txt  Makefile  TODO.txt  cmake_install.cmake  webserv.config  webserv.hpp
oldwebserv/: webserv
oldwebserv/pages/: test.html
oldwebserv/pages/salut/: coucou.html
oldwebserv/pages/upload/: salut.txt
oldwebserv/paul/: http_headers.cpp  listen.cpp  pollfd.cpp  server.hpp
oldwebserv/paul/parser/: config.conf  utils.cpp
oldwebserv/paul/tests/: tcp_server.cpp  udp_server.cpp
oldwebserv/paul/tests/client/: response.server  tcp.cpp  udp.cpp
oldwebserv/src/: CMakeLists.txt  Makefile  main.cpp
oldwebserv/src/Networking/: CGI.cpp  Client.cpp  Client.hpp  RequestInterpreter.cpp  Response.cpp  Server.cpp  StatusCode.cpp  Webserver.cpp  main.cpp
oldwebserv/src/Networking/Client/: Client.hpp
oldwebserv/src/Networking/Response/: Response.cpp  Response.hpp  ResponseHeader.cpp  ResponseHeader.hpp
oldwebserv/src/Networking/Server/: Server.hpp
oldwebserv/src/Networking/Sockets/: ConnectingSocket.hpp  ListeningSocket.hpp  ft_sockets.hpp
oldwebserv/src/Networking/Status/: Status.cpp  Status.hpp
oldwebserv/src/config/: 42.conf  Location.cpp  config.conf  config.cpp  config2.conf  configcomplexe.conf
oldwebserv/src/parser/: Error.hpp  Parser.hpp  utils.hpp
oldwebserv/src/parser/bytes/: Alpha.hpp  Char.cpp  HexChar.hpp  Match.cpp  Match.hpp  OneOf.cpp  Tag.cpp  TakeUntilMatch.hpp  TakeWhile.cpp  TakeWith.hpp
oldwebserv/src/parser/combinators/: AsSlice.hpp
oldwebserv/src/parser/sequence/: Delimited.hpp  Preceded.hpp  Terminated.hpp
oldwebserv/src/parsing/: Methods.cpp  Methods.hpp  Tokens.cpp  Tokens.hpp
oldwebserv/src/parsing/Config/Module/: Cgi.cpp  Cgi.hpp  Index.hpp  Listen.cpp  Location.hpp  Methods.hpp  Redirect.hpp  Root.cpp  Root.hpp  ServerName.hpp  Upload.cpp
oldwebserv/src/parsing/HTTP/: Request.hpp
oldwebserv/src/parsing/HTTP/Headers/: ContentLength.hpp  Date.cpp  Date.hpp  Header.hpp  HeaderField.hpp  Headers.hpp
oldwebserv/src/parsing/HTTP/Request/: RequestLine.hpp
oldwebserv/src/parsing/HTTP/Request/RequestTarget/: OriginForm.hpp  Scheme.cpp  Segment.hpp
oldwebserv/src/utils/: Base64.hpp  utils.hpp
oldwebserv/tester/: Base64_tester.cpp  Client_tester.cpp  ResponseHeader_tester.cpp  main.cpp
pages/: style.css
paul/: a.out  listen.cpp  send_packets.cpp  server.hpp
paul/parser/: a.out  parserConfig.cpp  server.hpp  utils.hpp
paul/tests/client/: a.out  tcp.cpp
src/: Constants.hpp  main.cpp  webserv_run
src/Networking/: ft_networking.hpp
src/Networking/Client/: Client.cpp
src/Networking/Server/: Server.cpp
src/Networking/Sockets/: BindingSocket.cpp  BindingSocket.hpp  ConnectingSocket.cpp  ListeningSocket.cpp  Socket.cpp  Socket.hpp
src/Networking/Utils/: utils.cpp  utils.hpp
src/config/: ConfigServer.cpp  ConfigServer.hpp  Location.hpp  config.hpp  config1.conf  configdoublon.conf
src/errors/: error_page_template.html
src/networking/: CGI.hpp  POST.txt  Request.cpp  Request.hpp  RequestInterpreter.hpp  Response.hpp  ResponseHeader.cpp  ResponseHeader.hpp  Server.hpp  StatusCode.hpp  Webserver.hpp
src/parser/: Error.cpp  Result.hpp  combinators.hpp  export.hpp  slice.hpp
src/parser/bytes/: Alpha.cpp  Char.hpp  Digit.cpp  Digit.hpp  HexChar.cpp  ITag.cpp  Itag.hpp  OneOf.hpp  Strip.hpp  Tag.hpp  TakeUntil.cpp  TakeUntil.hpp  TakeWhile.hpp
src/parser/combinators/: Alt.hpp  Map.hpp  Opt.hpp  Wrap.hpp
src/parser/sequence/: Many.hpp  Separated.hpp  Sequence.hpp
src/parsing/Config/: config.cpp  config.hpp
src/parsing/Config/Module/: ClientMaxBodySize.cpp  ClientMaxBodySize.hpp  ErrorPage.cpp  ErrorPage.hpp  Index.cpp  Listen.hpp  Location.cpp  Methods.cpp  Redirect.cpp  ServerName.cpp  Upload.hpp
src/parsing/Config/Structure/: Bloc.hpp  Line.cpp  Line.hpp
src/parsing/HTTP/: Request.cpp
src/parsing/HTTP/Request/: RequestLine.cpp
src/parsing/HTTP/Request/RequestTarget/: OriginForm.cpp  Scheme.hpp  Segment.cpp  Target.hpp
src/utils/: Base64.cpp  conversion_utils.cpp  file_utils.cpp  parsing_utils.cpp  string_utils.cpp
tester/: CMakeLists.txt  Server_tester.cpp
